# draw

./: .envrc  .ignore  Cargo.toml  README.md  _typos.toml  test.typ
.github/workflows/: links.yml  shear.yml  typos.yml
crates/atlas/: Cargo.toml
crates/atlas/src/: lib.rs
crates/canvas/: Cargo.toml
crates/canvas/src/: canvas.rs  lib.rs  pipeline.rs  projection.rs  scene.rs  view.rs
crates/canvas/src/shaders/: canvas.wgsl
crates/canvas/src/tools/: arrow.rs  ellipse.rs  eraser.rs  grab.rs  highlighter.rs  line.rs  mod.rs  pen.rs  rectangle.rs  select.rs  text.rs  zoom.rs
crates/canvas/src/ui/: mod.rs  styles.rs  toolbar.rs
crates/canvas/src/ui/options/: color_swatches.rs  mod.rs  rectangle.rs
crates/graphics/: Cargo.toml
crates/graphics/src/: lib.rs  systems.rs
crates/graphics/src/primitives/: ellipse.rs  line.rs  mod.rs  pen.rs  quad.rs  rectangle.rs  svg.rs  triangle.rs
crates/graphics/src/primitives/text/: cosmic.rs  mod.rs  options.rs
crates/gui/: Cargo.toml
crates/gui/src/: lib.rs  macros.rs
crates/gui/src/events/: mod.rs
crates/gui/src/tree/: layout.rs  mod.rs  zindex.rs
crates/gui/src/widgets/: background.rs  button.rs  container.rs  mod.rs  slider.rs  svg.rs  text.rs  text_input.rs
crates/input/: Cargo.toml
crates/input/src/: lib.rs  sctk.rs
crates/renderer/: Cargo.toml
crates/renderer/src/: lib.rs
platform/wayland/: Cargo.toml
platform/wayland/src/: clipboard.rs  fractional_scale.rs  global_binds.rs  keyboard.rs  lib.rs  logging.rs  main.rs  pointer.rs  seat.rs  viewporter.rs
platform/wayland/src/views/: canvas.rs  mod.rs
