[package]
name = "canvas"
version = { workspace = true }
edition = { workspace = true }


[dependencies]
renderer = { workspace = true }
graphics = { workspace = true }
gui = { workspace = true }
input = { workspace = true, features = ["serde"] }

anyhow = { workspace = true }
bytemuck = { workspace = true }
lyon = { workspace = true }
serde = { workspace = true }
strum = { workspace = true }

tracing = { workspace = true }

color = { workspace = true }
wgpu = { workspace = true }
euclid = { workspace = true }
