[package]
name = "gui"
version = { workspace = true }
edition = { workspace = true }


[dependencies]
input = { workspace = true }
graphics = { workspace = true }

color = { workspace = true }
lyon = { workspace = true }

tracing = { workspace = true }

euclid = { workspace = true }
taffy = { workspace = true }

accesskit = { workspace = true, optional = true }
rstar = { workspace = true }

[features]
default = ["accesskit"]
accesskit = ["dep:accesskit"]
